WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
44940
[EFL] Crashes while dragging any contents because of ClipboardEfl.
https://bugs.webkit.org/show_bug.cgi?id=44940
Summary
[EFL] Crashes while dragging any contents because of ClipboardEfl.
Ryuan Choi
Reported
2010-08-31 03:20:24 PDT
I found that dragging some contents make a crash because of ClipboardEfl. Although ClipboardEfl wasn't implemented yet, It must not make a crash.
Attachments
Patch
(2.68 KB, patch)
2010-08-31 04:06 PDT
,
Ryuan Choi
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ryuan Choi
Comment 1
2010-08-31 04:06:25 PDT
Created
attachment 66028
[details]
Patch
Antonio Gomes
Comment 2
2010-08-31 09:17:26 PDT
Comment on
attachment 66028
[details]
Patch Great fix. That is the way WebCore is going currently.
> +private: > + ClipboardEfl(ClipboardAccessPolicy, bool); > }; > }
I'd had made it protected, instead of private, but it is ok.
WebKit Commit Bot
Comment 3
2010-08-31 13:32:54 PDT
Comment on
attachment 66028
[details]
Patch Clearing flags on attachment: 66028 Committed
r66526
: <
http://trac.webkit.org/changeset/66526
>
WebKit Commit Bot
Comment 4
2010-08-31 13:32:58 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug