2010-08-31  Ryuan Choi  <ryuan.choi@samsung.com>

Reviewed by Antonio Gomes.

        [EFL] crashes while dragging any contents
        https://bugs.webkit.org/show_bug.cgi?id=44940

        Fix crashes caused by returning newly assigned value instead of adoptRef
        value.

        * page/efl/EventHandlerEfl.cpp:
        (WebCore::EventHandler::createDraggingClipboard):
        * platform/efl/ClipboardEfl.cpp:
        (WebCore::Editor::newGeneralClipboard):
        * platform/efl/ClipboardEfl.h:
        (WebCore::ClipboardEfl::create):

Canonical link: https://commits.webkit.org/57286@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@66526 268f45cc-cd09-0410-ab3c-d52691b4dbfc