WebCore/platform/efl/ClipboardEfl.h
@@ -28,7 +28,10 @@ class CachedImage;
 
 class ClipboardEfl : public Clipboard {
 public:
-    ClipboardEfl(ClipboardAccessPolicy, bool);
+    static PassRefPtr<ClipboardEfl> create(ClipboardAccessPolicy policy, bool forDragging = false)
+    {
+        return adoptRef(new ClipboardEfl(policy, forDragging));
+    }
     ~ClipboardEfl();
 
     void clearData(const String&);
@@ -53,6 +56,9 @@ public:
     virtual bool hasData();
 
     virtual void writePlainText(const WTF::String&);
+
+private:
+    ClipboardEfl(ClipboardAccessPolicy, bool);
 };
 }
 
